change kitty font

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,3 +1,2 @@
-# font_family FiraCodeNerd Font 
-font_family 0xProtoNerd Font
-font_size 13.5
+font_family FantasqueSansM Nerd Font
+font_size 12.5
