hot-fix: from $mainMod to ALT

--- a/hyperland.conf
+++ b/hyperland.conf
@@ -308,10 +308,10 @@ bind = , Print, exec, ~/.local/bin/hypr-screenshot full
 bind = CTRL, Print, exec, ~/.local/bin/hypr-screenshot full-clipboard
 
 # Select area screenshot
-bind = $mainMod, Print, exec, ~/.local/bin/hypr-screenshot area
+bind = ALT, Print, exec, ~/.local/bin/hypr-screenshot area
 
 # Select area screenshot to clipboard
-bind = $mainMod CTRL, Print, exec, ~/.local/bin/hypr-screenshot area-clipboard
+bind = ALT CTRL, Print, exec, ~/.local/bin/hypr-screenshot area-clipboard
 
 # Active window screenshot
 bind = SUPER, Print, exec, ~/.local/bin/hypr-screenshot window
