--- a/hyperland.conf
+++ b/hyperland.conf
@@ -72,7 +72,7 @@ general {
     gaps_in = 0
     gaps_out = 0
 
-    border_size = 1
+    border_size = 0
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
@@ -210,7 +210,7 @@ device {
 ###################
 
 # See https://wiki.hyprland.org/Configuring/Keywords/
-$mainMod = ALT # Sets "ALT" key as main modifier
+$mainMod = SUPER 
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, RETURN, exec, $terminal
