--- a/alacritty.toml
+++ b/alacritty.toml
@@ -1,6 +1,8 @@
 [general]
 import = [
-    "~/.config/alacritty/themes/themes/terminal_app.toml"
+    # "~/.config/alacritty/themes/themes/terminal_app.toml"
+    "~/.config/alacritty/themes/themes/monokai_charcoal.toml"
+     # "~/.config/alacritty/themes/themes/alabaster.toml"
 ]
 
 [window]
@@ -9,12 +11,9 @@ decorations_theme_variant = "Dark"
 
 [font]
 normal = {family = "EnvyCodeR Nerd Font", style="Regular"}
-size = 16.00
+size = 17.00
 
 [colors.primary]
-# foreground = "#00FF00"
-foreground = "#FFFFFF"
-# foreground ="#ffde33" 
 background = "#000000"
 
 [mouse]
