--- a/hyperland.conf
+++ b/hyperland.conf
@@ -24,8 +24,7 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preferred,auto,auto
-
+monitor=,preferred,auto,1
 
 ###################
 ### MY PROGRAMS ###
@@ -35,7 +34,7 @@ monitor=,preferred,auto,auto
 
 # Set programs that you use
 $terminal = alacritty
-$fileManager = dolphin
+$fileManager = thunar
 $menu = wofi --show drun
 
 
@@ -46,8 +45,9 @@ $menu = wofi --show drun
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
+ exec-once = /usr/lib/polkit-kde-authentication-agent-1
+ exec-once = hypridle
  exec-once = $terminal
-# exec-once = nm-applet &
  exec-once = waybar & hyprpaper
 
 
@@ -57,6 +57,7 @@ $menu = wofi --show drun
 
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
 
+env = GDK_SCALE, 1.5
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 
@@ -65,6 +66,10 @@ env = HYPRCURSOR_SIZE,24
 ### LOOK AND FEEL ###
 #####################
 
+xwayland{
+  force_zero_scaling = true
+}
+
 # Refer to https://wiki.hyprland.org/Configuring/Variables/
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
@@ -72,11 +77,12 @@ general {
     gaps_in = 0
     gaps_out = 0
 
-    border_size = 0
+    border_size = 1
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.inactive_border = rgba(595959aa)
+    col.active_border = rgba(ff9900ee) rgba(ff6600ee) 45deg 
+    col.inactive_border = rgba(996633aa)
+
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = true
@@ -89,8 +95,8 @@ general {
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    rounding = 10
-    rounding_power = 2
+    # rounding = 10
+    # rounding_power = 2
 
     # Change transparency of focused and unfocused windows
     active_opacity = 1.0
@@ -146,12 +152,12 @@ animations {
 # Ref https://wiki.hyprland.org/Configuring/Workspace-Rules/
 # "Smart gaps" / "No gaps when only"
 # uncomment all if you wish to use that.
-# workspace = w[tv1], gapsout:0, gapsin:0
-# workspace = f[1], gapsout:0, gapsin:0
-# windowrulev2 = bordersize 0, floating:0, onworkspace:w[tv1]
-# windowrulev2 = rounding 0, floating:0, onworkspace:w[tv1]
-# windowrulev2 = bordersize 0, floating:0, onworkspace:f[1]
-# windowrulev2 = rounding 0, floating:0, onworkspace:f[1]
+workspace = w[tv1], gapsout:0, gapsin:0
+workspace = f[1], gapsout:0, gapsin:0
+windowrulev2 = bordersize 0, floating:0, onworkspace:w[tv1]
+windowrulev2 = rounding 0, floating:0, onworkspace:w[tv1]
+windowrulev2 = bordersize 0, floating:0, onworkspace:f[1]
+windowrulev2 = rounding 0, floating:0, onworkspace:f[1]
 
 # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
 dwindle {
@@ -210,7 +216,7 @@ device {
 ###################
 
 # See https://wiki.hyprland.org/Configuring/Keywords/
-$mainMod = SUPER 
+$mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, RETURN, exec, $terminal
