--- a/alacritty.toml
+++ b/alacritty.toml
@@ -1,8 +1,6 @@
 [general]
 import = [
-    # "~/.config/alacritty/themes/themes/terminal_app.toml"
-    "~/.config/alacritty/themes/themes/monokai_charcoal.toml"
-     # "~/.config/alacritty/themes/themes/alabaster.toml"
+    "~/.config/alacritty/themes/themes/terminal_app.toml"
 ]
 
 [window]
@@ -10,12 +8,11 @@ startup_mode ="Fullscreen"
 decorations_theme_variant = "Dark"
 
 [font]
-normal = {family = "EnvyCodeR Nerd Font", style="Regular"}
-size = 17.00
+normal = {family = "UbuntuSansMonoNerdFontPropo", style="Regular"}
+size = 18.00
 
 [colors.primary]
 background = "#000000"
 
 [mouse]
 hide_when_typing = true
-
