--- a/languages.toml
+++ b/languages.toml
@@ -14,3 +14,23 @@ command = "rust-analyzer"
 check.command = "clippy"
 inlayHints.bindingModeHints.enable = true
 inlayHints.typeHints.enable = true
+
+[[language]]
+name = "typescript"
+roots = ["deno.json", "deno.jsonc", "package.json"]
+file-types = ["ts", "tsx"]
+auto-format = true
+language-servers = ["deno-lsp"]
+
+[[language]]
+name = "javascript"
+roots = ["deno.json", "deno.jsonc", "package.json"]
+file-types = ["js", "jsx"]
+auto-format = true
+language-servers = ["deno-lsp"]
+
+[language-server.deno-lsp]
+command = "deno"
+args = ["lsp"]
+config.deno.enable = true
+
