--- a/helix.config.toml
+++ b/helix.config.toml
@@ -3,6 +3,7 @@ theme = "jetbrains_dark"
 [editor]
 line-number = "relative"
 mouse = true
+end-of-line-diagnostics = "hint"
 
 [editor.cursor-shape]
 insert = "bar"
@@ -11,6 +12,9 @@ select = "underline"
 
 [editor.file-picker]
 hidden = false
+
+[editor.inline-diagnostics]
+cursor-line = "info"
 
 [keys.normal]
 o = ["open_below", "normal_mode"] # "o", "o<Esc>"
