--- a/hyprland.conf
+++ b/hyprland.conf
@@ -24,7 +24,7 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preferred,auto,1
+#monitor=,preferred,auto,1
 
 ###################
 ### MY PROGRAMS ###
@@ -35,7 +35,7 @@ monitor=,preferred,auto,1
 # Set programs that you use
 $terminal = alacritty
 $fileManager = thunar
-$menu = wofi --show drun
+$menu = rofi -show drun
 
 
 #################
@@ -48,8 +48,8 @@ $menu = wofi --show drun
  exec-once = /usr/lib/polkit-kde-authentication-agent-1
  exec-once = hypridle
  exec-once = $terminal
- exec-once = waybar & hyprpaper
-
+ exec-once = waybar
+ exec-once = swaybg -i ~/dark-anime-girl.png
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -57,7 +57,7 @@ $menu = wofi --show drun
 
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
 
-env = GDK_SCALE, 1.5
+env = GDK_SCALE, 1.0
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 
@@ -171,10 +171,10 @@ master {
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#misc
-misc {
-    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
-    disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
-}
+#misc {
+#    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
+#    disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
+#}
 
 
 #############
@@ -216,7 +216,7 @@ device {
 ###################
 
 # See https://wiki.hyprland.org/Configuring/Keywords/
-$mainMod = SUPER
+$mainMod = ALT
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, RETURN, exec, $terminal
