--- a/foot.ini
+++ b/foot.ini
@@ -4,14 +4,14 @@ font=Victor Mono Nerd Font:size=18
 
 [colors]
 background=000000
-# foreground=ff8000
-foreground=00ff00
+foreground=ff8000
+#foreground=00ff00
 
 [cursor]
-style=beam
+style=Block
 unfocused-style=none
 blink=yes
-color=000000 00ff00
+# color=000000 00ff00
 
 [mouse]
 hide-when-typing=yes
