--- a/foot.ini
+++ b/foot.ini
@@ -1,11 +1,12 @@
 [main]
 term=foot
-font=Victor Mono Nerd Font:size=18
+font=Ubuntu Sans Mono Nerd Font Mono:size=18
 
 [colors]
 background=000000
-foreground=ff8000
-#foreground=00ff00
+# foreground=ff8000
+foreground=fffff0
+# foreground=00ff00
 
 [cursor]
 style=Block
