--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,7 @@
 # Set the prefix key to Alt + a
-set-option -g prefix M-/
+set-option -g prefix `
 unbind C-b
-bind M-/ send-prefix
+bind ` send-prefix
 
 # Enable mouse support (for selection, resizing, etc.)
 set-option -g mouse on
@@ -22,6 +22,8 @@ set-option -g set-clipboard on
 
 # Display the status bar
 set -g status on
+set-option -g status-style "bg=black"
+set-option -ag status-style "fg=green"
 
 # Set default terminal mode to 256-color
 set -g default-terminal "screen-256color"
