--- a/tmux.conf
+++ b/tmux.conf
@@ -22,7 +22,7 @@ set-option -g set-clipboard on
 
 # Display the status bar
 set -g status on
-set-option -g status-style "bg=black"
+set-option -g status-style "bg=#181818"
 set-option -ag status-style "fg=green"
 
 # Set default terminal mode to 256-color
