--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,7 @@
 # Set the prefix key to Alt + a
-set-option -g prefix `
+set-option -g prefix M-/
 unbind C-b
-bind ` send-prefix
+bind M-/ send-prefix
 
 # Enable mouse support (for selection, resizing, etc.)
 set-option -g mouse on
