--- a/tmux.conf
+++ b/tmux.conf
@@ -23,7 +23,9 @@ set-option -g set-clipboard on
 # Display the status bar
 set -g status on
 set-option -g status-style "bg=#181818"
-set-option -ag status-style "fg=green"
+set-option -ag status-style "fg=white"
+set-option -g status-position "bottom"
+set-option -g status-justify "centre"
 
 # Set default terminal mode to 256-color
 set -g default-terminal "screen-256color"
