--- a/helix.config.toml
+++ b/helix.config.toml
@@ -8,8 +8,8 @@ text-width = 80
 true-color = true
 insert-final-newline = true
 mouse = true
-# end-of-line-diagnostics = "hint"
-continue-comments = false
+end-of-line-diagnostics = "hint"
+continue-comments = true
 soft-wrap.enable = true
 
 [editor.inline-diagnostics]
@@ -24,8 +24,9 @@ j = {"k"= "normal_mode"}
 
 [editor.indent-guides]
 render = true
-character = "⸽" # Some characters that work well: "▏", "┆", "┊", "⸽"
-# skip-levels = 1
+character = "|"
+# character = "⸽" # Some characters that work well: "▏", "┆", "┊", "⸽"
+skip-levels = 1
 
 [editor.smart-tab]
 enable = false
