--- a/hyprland.conf
+++ b/hyprland.conf
@@ -34,7 +34,7 @@ monitor=,preferred,auto,auto
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
 # Set programs that you use
-$terminal = alacritty
+$terminal = ghostty
 $fileManager = thunar
 $menu = wofi --show drun
 
@@ -46,12 +46,12 @@ $menu = wofi --show drun
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-exec-once = $terminal
+exec-once = $terminal & librewolf
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
 exec-once = gBar bar 0
-exec-once = hyprshade on blue-light-filter
 exec-once = ~/dotfiles/battery-monitor.sh
+exec-once = hyprsunset -t 3000
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -229,7 +229,7 @@ device {
 ###################
 
 # See https://wiki.hyprland.org/Configuring/Keywords/
-$mainMod = ALT # Sets "Windows" key as main modifier
+$mainMod = ALT# Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, RETURN, exec, $terminal
