strip off neovim config

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -34,10 +34,9 @@ monitor=,preferred,auto,auto
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
 # Set programs that you use
-$terminal = ghostty
+$terminal = kitty
 $fileManager = thunar
 $menu = wofi --show drun
-
 
 #################
 ### AUTOSTART ###
