--- a/tmux.conf
+++ b/tmux.conf
@@ -6,12 +6,6 @@ bind M-/ send-prefix
 # Enable mouse support (for selection, resizing, etc.)
 set-option -g mouse on
 
-# Copy selection to system clipboard using xclip
-# This assumes you have xclip installed and your system supports it
-# You can use tmux's built-in copy-mode and pipe the selection to xclip
-# Binding 'y' to copy selected text to clipboard
-bind y run "tmux save-buffer - | xclip -selection clipboard"
-
 # Start window numbering from 1 (instead of 0)
 set-option -g base-index 1
 
@@ -28,7 +22,8 @@ set-option -g status-position "bottom"
 set-option -g status-justify "centre"
 
 # Set default terminal mode to 256-color
-set -g default-terminal "screen-256color"
+# set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-kitty"
 
 # Split panes using | (vertical) and - (horizontal)
 bind | split-window -h
