--- a/kitty.conf
+++ b/kitty.conf
@@ -1,4 +1,5 @@
 font_family family="IosevkaTerm Nerd Font Mono" style="Light"
+# font_family family="CaskaydiaCove Nerd Font Mono" style="Light"
 font_size 17.0
 
 cursor_shape beam
