--- a/kitty.conf
+++ b/kitty.conf
@@ -1,6 +1,6 @@
-font_family family="IosevkaTerm Nerd Font Mono" style="Light"
-# font_family family="CaskaydiaCove Nerd Font Mono" style="Light"
+font_family family="IosevkaTermSlab Nerd Font Mono" style="Light"
 font_size 17.0
+# italic_font none
 
 cursor_shape beam
 cursor_trail 1
