use rofi rather wofi

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -36,7 +36,7 @@ monitor=,preferred,auto,auto
 # Set programs that you use
 $terminal = kitty
 $fileManager = thunar
-$menu = wofi --show drun
+$menu = rofi -show drun
 
 #################
 ### AUTOSTART ###
@@ -45,11 +45,12 @@ $menu = wofi --show drun
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-exec-once = $terminal & librewolf
+exec-once = $terminal
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
-exec-once = gBar bar 0
-exec-once = ~/dotfiles/battery-monitor.sh
+exec-once = waybar
+# exec-once = gBar bar 0
+# exec-once = ~/dotfiles/battery-monitor.sh
 exec-once = hyprsunset -t 3000
 
 #############################
@@ -228,7 +229,7 @@ device {
 ###################
 
 # See https://wiki.hyprland.org/Configuring/Keywords/
-$mainMod = ALT# Sets "Windows" key as main modifier
+$mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, RETURN, exec, $terminal
@@ -236,7 +237,7 @@ bind = $mainMod, Q, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, R, exec, $menu
+bind = $mainMod, D, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, F, fullscreen, # dwindle
