--- a/kitty.conf
+++ b/kitty.conf
@@ -1,6 +1,9 @@
 font_family family="IosevkaTermSlab Nerd Font Mono" style="Light"
 font_size 17.0
 # italic_font none
+# foreground #00ff00
+# font_family family="UbuntuMono Nerd Font" style="Regular"
+# font_size 17
 
 cursor_shape beam
 cursor_trail 1
@@ -11,3 +14,5 @@ mouse_hide_wait -1.0
 open_url_with handlr
 
 confirm
+
+enable_audio_bell no
