bashrc: Remove oh-my-bash plugin

--- a/helix.config.toml
+++ b/helix.config.toml
@@ -6,7 +6,7 @@ theme = "gruber-darker"
 line-number = "relative"
 text-width = 80
 true-color = true
-insert-final-newline = true
+insert-final-newline = false
 mouse = true
 end-of-line-diagnostics = "hint"
 continue-comments = true
