--- a/languages.toml
+++ b/languages.toml
@@ -9,7 +9,7 @@ language-servers = ["rust-analyzer"]
 
 [language-server.rust-analyzer]
 command = "rust-analyzer"
-# path = "/home/juan/.cargo/bin"
+path = "/home/juan/.cargo/bin"
 enable_semantic_tokens = true
 
 [language-server.rust-analyzer.config]
