--- a/kitty.conf
+++ b/kitty.conf
@@ -1,9 +1,9 @@
-font_family family="IosevkaTermSlab Nerd Font Mono" style="Light"
-font_size 17.0
+# font_family family="IosevkaTermSlab Nerd Font Mono" style="Light"
+# font_size 17.0
 # italic_font none
 # foreground #00ff00
-# font_family family="UbuntuMono Nerd Font" style="Regular"
-# font_size 17
+font_family family="Monofur Nerd Font Mono" style="Regular"
+font_size 17
 
 cursor_shape beam
 cursor_trail 1
