--- a/alacritty.toml
+++ b/alacritty.toml
@@ -2,5 +2,7 @@
 import = ["~/.config/alacritty/themes/terminal_app.toml"]
 
 [font]
-normal = {family = "IosevkaTermSlabNerdFont", style = "Light"}
-size = 15.0
+# normal = {family = "IosevkaTermSlabNerdFont", style = "Light"}
+# size = 16.0
+normal = {family = "MonofurNerdFontMono", style = "Light"}
+size = 17
