set up touch pad on wayfire config

--- a/wayfire.ini
+++ b/wayfire.ini
@@ -12,7 +12,10 @@
 
 # Example configuration:
 #
-# [input]
+[input]
+middle_emulation = true
+disable_touch_while_typing = true
+natural_scroll = true
 # xkb_layout = us,fr
 # xkb_variant = dvorak,bepo
 # xkb_options = grp:win_space_toggle
@@ -134,7 +137,7 @@ autostart_wf_shell = false
 #
 # These are started by the autostart_wf_shell option above.
 #
-# background = wf-background
+background = wf-background
 # panel = wf-panel
 #
 # You may also use wf-dock,
