wayfire: setup brightness, sound, and gamma control

--- a/wayfire.ini
+++ b/wayfire.ini
@@ -155,7 +155,9 @@ notifications = mako
 
 # Screen color temperature
 # https://sr.ht/~kennylevinsen/wlsunset/
-gamma = wlsunset
+# gamma = wlsunset
+gamma = gammastep -O 4000
+
 
 # Idle configuration
 # https://github.com/swaywm/swayidle
@@ -216,19 +218,33 @@ command_screenshot_interactive = slurp | grim -g - "~/dev/screenshots/$(date '+%
 
 # Volume controls
 # https://alsa-project.org
-repeatable_binding_volume_up = KEY_VOLUMEUP
-command_volume_up = amixer set Master 5%+
-repeatable_binding_volume_down = KEY_VOLUMEDOWN
-command_volume_down = amixer set Master 5%-
+# repeatable_binding_volume_up = KEY_VOLUMEUP
+# command_volume_up = amixer set Master 5%+
+# repeatable_binding_volume_down = KEY_VOLUMEDOWN
+# command_volume_down = amixer set Master 5%-
+# binding_mute = KEY_MUTE
+# command_mute = amixer set Master toggle
+
 binding_mute = KEY_MUTE
-command_mute = amixer set Master toggle
+command_mute = pactl set-sink-mute \@DEFAULT_SINK@ toggle
+repeatable_binding_volume_down = KEY_VOLUMEDOWN
+command_volume_down = pactl set-sink-volume \@DEFAULT_SINK@ -5%
+repeatable_binding_volume_up = KEY_VOLUMEUP
+command_volume_up = pactl set-sink-volume \@DEFAULT_SINK@ +5%
+
+command_mic_mute = pactl set-source-mute \@DEFAULT_SOURCE@ toggle
+
 
 # Screen brightness
 # https://haikarainen.github.io/light/
+#repeatable_binding_light_up = KEY_BRIGHTNESSUP
+#command_light_up = light -A 5
+#repeatable_binding_light_down = KEY_BRIGHTNESSDOWN
+#command_light_down = light -U 5
 repeatable_binding_light_up = KEY_BRIGHTNESSUP
-command_light_up = light -A 5
+command_light_up = brightnessctl set +5% 
 repeatable_binding_light_down = KEY_BRIGHTNESSDOWN
-command_light_down = light -U 5
+command_light_down = brightnessctl set 5%-
 
 # Windows ──────────────────────────────────────────────────────────────────────
 
