wayfire: new_bindings to switch workspaces

--- a/wayfire.ini
+++ b/wayfire.ini
@@ -295,10 +295,19 @@ binding_down = <ctrl> <super> KEY_DOWN
 binding_up = <ctrl> <super> KEY_UP
 binding_right = <ctrl> <super> KEY_RIGHT
 # Move the focused window with the same key-bindings, but add Shift.
-with_win_left = <ctrl> <super> <shift> KEY_LEFT
-with_win_down = <ctrl> <super> <shift> KEY_DOWN
-with_win_up = <ctrl> <super> <shift> KEY_UP
-with_win_right = <ctrl> <super> <shift> KEY_RIGHT
+with_win_left = <super> <shift> KEY_LEFT
+with_win_down = <super> <shift> KEY_DOWN
+with_win_up = <super> <shift> KEY_UP
+with_win_right = <super> <shift> KEY_RIGHT
+with_win_1 = <super> <shift> KEY_1
+with_win_2 = <super> <shift> KEY_2
+with_win_3 = <super> <shift> KEY_3
+with_win_4 = <super> <shift> KEY_4
+with_win_5 = <super> <shift> KEY_5
+with_win_6 = <super> <shift> KEY_6
+with_win_7 = <super> <shift> KEY_7
+with_win_8 = <super> <shift> KEY_8
+with_win_9 = <super> <shift> KEY_9
 
 # Show the current workspace row as a cube.
 [cube]
@@ -343,15 +352,15 @@ next_output_with_win = <super> <shift> KEY_O
 toggle = <super> KEY_I
 
 # Send toggle menu event.
-[wayfire-shell]
-toggle_menu = <super> KEY_B
+# [wayfire-shell]
+# toggle_menu = <super> KEY_B
 
 # Rules ────────────────────────────────────────────────────────────────────────
 
 # Example configuration:
 #
-[window-rules]
-maximize_alacritty = on created if app_id is "Alacritty" then maximize
+# [window-rules]
+# maximize_alacritty = on created if app_id is "Alacritty" then maximize
 #
 # You can get the properties of your applications with the following command:
 # $ WAYLAND_DEBUG=1 alacritty 2>&1 | kak
