--- a/wayfire.ini
+++ b/wayfire.ini
@@ -137,13 +137,14 @@ autostart_wf_shell = false
 #
 # These are started by the autostart_wf_shell option above.
 #
-background = wf-background
-# panel = wf-panel
+background = swaybg --image ~/Downloads/chinatown-1-67732-1024x576-MM-80.webp
+panel = waybar
+
 #
 # You may also use wf-dock,
 # which is included in wf-shell but is not enabled by default.
 #
-# dock = wf-dock
+dock = wf-dock
 
 # Output configuration
 # https://wayland.emersion.fr/kanshi/
