--- a/alacritty.toml
+++ b/alacritty.toml
@@ -2,7 +2,11 @@
 import = ["~/.config/alacritty/themes/terminal_app.toml"]
 
 [font]
-# normal = {family = "IosevkaTermSlabNerdFont", style = "Light"}
-# size = 16.0
-normal = {family = "MonofurNerdFontMono", style = "Light"}
-size = 17
+normal = {family = "IosevkaTermSlabNerdFont", style = "Light"}
+size = 16.0
+# normal = {family = "MonofurNerdFontMono", style = "Light"}
+# size = 17
+
+[window]
+decorations = "None"
+startup_mode = "Maximized"
