Add screenshot support

--- a/wayfire.ini
+++ b/wayfire.ini
@@ -156,9 +156,7 @@ notifications = mako
 
 # Screen color temperature
 # https://sr.ht/~kennylevinsen/wlsunset/
-# gamma = wlsunset
-gamma = gammastep -O 4000
-
+gamma = wlsunset
 
 # Idle configuration
 # https://github.com/swaywm/swayidle
@@ -187,7 +185,7 @@ portal = /usr/libexec/xdg-desktop-portal
 # Start a terminal
 # https://github.com/alacritty/alacritty
 binding_terminal = <super> KEY_ENTER
-command_terminal = alacritty
+command_terminal = ghostty
 
 # Start your launcher
 # https://hg.sr.ht/~scoopta/wofi
@@ -212,10 +210,11 @@ command_logout = wlogout
 # Screenshots
 # https://wayland.emersion.fr/grim/
 # https://wayland.emersion.fr/slurp/
-binding_screenshot = KEY_PRINT
-command_screenshot = grim "~/dev/screenshots/$(date '+%F_%T').webp"
-binding_screenshot_interactive = <shift> KEY_PRINT
-command_screenshot_interactive = slurp | grim -g - "~/dev/screenshots/$(date '+%F_%T').webp"
+binding_screenshot = <super> KEY_S
+command_screenshot = grim $HOME/Pictures/screenshots-$(date "+%Y-%m-%d-%H:%M:%S").png
+binding_slurp = <super> <shift> KEY_S
+command_slurp = slurp | grim -g - $HOME/Pictures/screenshots-$(date "+%Y-%m-%d-%H:%M:%S").png
+
 
 # Volume controls
 # https://alsa-project.org
