--- a/hyprland.conf
+++ b/hyprland.conf
@@ -34,7 +34,7 @@ monitor=,preferred,auto,auto
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
 # Set programs that you use
-$terminal = kitty
+$terminal = alacritty
 $fileManager = thunar
 $menu = rofi -show drun
 
@@ -71,13 +71,13 @@ env = GRIM_DEFAULT_DIR,/home/juan/screenshots
 # Please note permission changes here require a Hyprland restart and are not applied on-the-fly
 # for security reasons
 
-# ecosystem {
-#   enforce_permissions = 1
-# }
+ecosystem {
+  enforce_permissions = 1
+}
 
-# permission = /usr/(bin|local/bin)/grim, screencopy, allow
-# permission = /usr/(lib|libexec|lib64)/xdg-desktop-portal-hyprland, screencopy, allow
-# permission = /usr/(bin|local/bin)/hyprpm, plugin, allow
+permission = /usr/(bin|local/bin)/grim, screencopy, allow
+permission = /usr/(lib|libexec|lib64)/xdg-desktop-portal-hyprland, screencopy, allow
+permission = /usr/(bin|local/bin)/hyprpm, plugin, allow
 
 
 #####################
@@ -212,9 +212,9 @@ input {
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
-gestures {
-    workspace_swipe = false
-}
+# gestures {
+#     workspace_swipe = false
+# }
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
@@ -243,7 +243,6 @@ bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, F, fullscreen, # dwindle
 bind = $mainMod, L, exec, swaylock -ef -c 000000 # dwindle
 bind = $mainMod, Print, exec, slurp | grim -g -
-bind = $mainMod, B, exec, ~/dotfiles/toggle-gbar.sh
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
