--- a/wayfire.ini
+++ b/wayfire.ini
@@ -127,6 +127,8 @@ toggle = <super> <ctrl> KEY_F
 #Gtk+3 applications slow startup or .desktop files not opening
 #https://github.com/WayfireWM/wayfire/wiki/Tips-&-Tricks#gtk3-applications-slow-startup-or-desktop-files-not-opening
 0_env = dbus-update-activation-environment --systemd WAYLAND_DISPLAY DISPLAY XAUTHORITY
+portal = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP=wayfire
+xdg-portal = /usr/libexec/xdg-desktop-portal -r & /usr/libexec/xdg-desktop-portal-wlr
 
 # Automatically start background and panel.
 # Set to false if you want to override the default clients.
@@ -137,7 +139,7 @@ autostart_wf_shell = false
 #
 # These are started by the autostart_wf_shell option above.
 #
-background = swaybg --image ~/Downloads/chinatown-1-67732-1024x576-MM-80.webp
+background = swaybg --image ~/Downloads/KgN04Ka-3151713639.jpg
 panel = waybar
 
 #
@@ -185,7 +187,7 @@ portal = /usr/libexec/xdg-desktop-portal
 # Start a terminal
 # https://github.com/alacritty/alacritty
 binding_terminal = <super> KEY_ENTER
-command_terminal = ghostty
+command_terminal = alacritty
 
 # Start your launcher
 # https://hg.sr.ht/~scoopta/wofi
