--- a/alacritty.toml
+++ b/alacritty.toml
@@ -2,16 +2,13 @@
 import = ["~/.config/alacritty/themes/terminal_app.toml"]
 
 [font]
-# normal = {family = "IosevkaTermSlabNerdFont", style = "Light"}
-# size = 16.0
+# normal = { family = "IosevkaTermSlabNerdFont", style = "Regular" }
+# size = 17
 
 normal = {family = "DaddyTimeMonoNerdFont", style = "Regular"}
-size = 17
+size = 16
 
-# normal = {family = "EnvyCodeRNerdFont", style = "Regular"}
-# size = 17.0
-
-# normal = {family = "MonofurNerdFontMono", style = "Light"}
+# normal = { family = "UbuntuSansMonoNerdFontMono", style = "Light" }
 # size = 17
 
 [window]
