--- a/hyprland.conf
+++ b/hyprland.conf
@@ -46,12 +46,9 @@ $menu = rofi -show drun
 # Or execute your favorite apps at launch like this:
 
 exec-once = $terminal
-# exec-once = nm-applet &
-# exec-once = waybar & hyprpaper & firefox
-exec-once = waybar
-# exec-once = gBar bar 0
-# exec-once = ~/dotfiles/battery-monitor.sh
-exec-once = hyprsunset -t 3000
+exec-once = waybar & mako
+exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once = hyprsunset -t 4000
 
 #############################
 ### ENVIRONMENT VARIABLES ###
