--- a/alacritty.toml
+++ b/alacritty.toml
@@ -5,11 +5,11 @@ import = ["~/.config/alacritty/themes/terminal_app.toml"]
 # normal = { family = "IosevkaTermSlabNerdFont", style = "Regular" }
 # size = 17
 
-normal = {family = "DaddyTimeMonoNerdFont", style = "Regular"}
-size = 16
+# normal = {family = "DaddyTimeMonoNerdFont", style = "Regular"}
+# size = 16
 
-# normal = { family = "UbuntuSansMonoNerdFontMono", style = "Light" }
-# size = 17
+normal = { family = "UbuntuSansMonoNerdFontMono", style = "Light" }
+size = 16.5
 
 [window]
 decorations = "None"
