--- a/alacritty.toml
+++ b/alacritty.toml
@@ -5,11 +5,11 @@ import = ["~/.config/alacritty/themes/terminal_app.toml"]
 # normal = { family = "IosevkaTermSlabNerdFont", style = "Regular" }
 # size = 17
 
-# normal = {family = "DaddyTimeMonoNerdFont", style = "Regular"}
-# size = 16
+# normal = { family = "UbuntuSansMonoNerdFontMono", style = "Regular" }
+# size = 16.5
 
-normal = { family = "UbuntuSansMonoNerdFontMono", style = "Light" }
-size = 16.5
+normal = { family = "MonofurNerdFontMono", style = "Retina" }
+size = 20
 
 [window]
 decorations = "None"
