--- a/hyprland.conf
+++ b/hyprland.conf
@@ -46,7 +46,8 @@ $menu = rofi -show drun
 # Or execute your favorite apps at launch like this:
 
 exec-once = $terminal
-exec-once = waybar & mako
+exec-once = waybar &
+exec-once = mako &
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = hyprsunset -t 4000
 
