--- a/hyprland.conf
+++ b/hyprland.conf
@@ -46,8 +46,8 @@ $menu = rofi -show drun
 # Or execute your favorite apps at launch like this:
 
 exec-once = $terminal
-exec-once = waybar &
-exec-once = mako &
+exec-once = waybar
+exec-once = mako
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = hyprsunset -t 4000
 
@@ -227,7 +227,7 @@ device {
 ###################
 
 # See https://wiki.hyprland.org/Configuring/Keywords/
-$mainMod = SUPER # Sets "Windows" key as main modifier
+$mainMod = ALT # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, RETURN, exec, $terminal
