--- a/kitty.conf
+++ b/kitty.conf
@@ -1,4 +1,5 @@
-font_family family="IosevkaTermSlab Nerd Font Mono" style="Light"
+hide_window_decorations yes
+font_family family="IosevkaTerm Nerd Font Mono" style="Light"
 font_size 17.0
 italic_font none
 # foreground #00ff00
@@ -9,7 +10,7 @@ cursor_shape beam
 cursor_trail 1
 
 mouse_hide_wait -1.0
-#hide when typing text
+hide when typing text
 
 open_url_with handlr
 
