--- a/kitty.conf
+++ b/kitty.conf
@@ -1,12 +1,13 @@
 hide_window_decorations yes
-font_family family="IosevkaTerm Nerd Font Mono" style="Light"
+font_family family="IosevkaTermSlab Nerd Font Mono" style="Light"
 font_size 17.0
 italic_font none
-# foreground #00ff00
+# foreground #d2691e 
+foreground  #32cd32
 # font_family family="Monofur Nerd Font Mono" style="Regular"
 # font_size 18
 
-cursor_shape beam
+cursor_shape block
 cursor_trail 1
 
 mouse_hide_wait -1.0
