--- a/wayfire.ini
+++ b/wayfire.ini
@@ -50,7 +50,6 @@ natural_scroll = true
 # See the Configuration document for a complete list.
 plugins = \
   alpha \
-  animate \
   autostart \
   blur \
   command \
@@ -79,6 +78,7 @@ plugins = \
   zoom
 
 # wayfire-shell
+# animate
 #
 # Note: [blur] is not enabled by default, because it can be resource-intensive.
 # Feel free to add it to the list if you want it.
@@ -86,14 +86,15 @@ plugins = \
 # https://github.com/WayfireWM/wayfire/wiki/Configuration#blur
 
 # Close focused window.
-close_top_view = <super> KEY_Q | <alt> KEY_F4
+close_top_view = <super> KEY_Q | <super> KEY_F4
 
 # Workspaces arranged into a grid: 3 × 3.
 vwidth = 3
 vheight = 3
 
 # Prefer client-side decoration or server-side decoration
-preferred_decoration_mode = client
+preferred_decoration_mode = server
+# preferred_decoration_mode = client
 
 # Mouse bindings ───────────────────────────────────────────────────────────────
 
@@ -105,13 +106,13 @@ activate = <super> BTN_LEFT
 [resize]
 activate = <super> BTN_RIGHT
 
-# Zoom in the desktop by scrolling + Super.
+# Zoom in the desktop by scrolling + super.
 [zoom]
 modifier = <super>
 
-# Change opacity by scrolling with Super + Alt.
+# Change opacity by scrolling with super + alt.
 [alpha]
-modifier = <super> <alt>
+modifier = <super> <super>
 
 # Rotate windows with the mouse.
 [wrot]
@@ -139,8 +140,8 @@ autostart_wf_shell = false
 #
 # These are started by the autostart_wf_shell option above.
 #
-background = swaybg --image ~/Downloads/KgN04Ka-3151713639.jpg
-panel = waybar
+background = swaybg --image ~/Downloads/black-hole-hd_bWxnaG2UmZqaraWkpJRmbmdlrWZnZWU-469926459.jpg
+# panel = waybar
 
 #
 # You may also use wf-dock,
@@ -158,7 +159,7 @@ notifications = mako
 
 # Screen color temperature
 # https://sr.ht/~kennylevinsen/wlsunset/
-gamma = wlsunset
+# gamma = wlsunset
 
 # Idle configuration
 # https://github.com/swaywm/swayidle
@@ -171,12 +172,12 @@ portal = /usr/libexec/xdg-desktop-portal
 
 # Example configuration:
 #
-# [idle]
-# toggle = <super> KEY_Z
-# screensaver_timeout = 300
-# dpms_timeout = 600
+[idle]
+toggle = <super> KEY_Z
+screensaver_timeout = 300
+dpms_timeout = 600
 #
-# Disables the compositor going idle with Super + z.
+# Disables the compositor going idle with super + z.
 # This will lock your screen after 300 seconds of inactivity, then turn off
 # your displays after another 300 seconds.
 
@@ -233,7 +234,6 @@ repeatable_binding_volume_down = KEY_VOLUMEDOWN
 command_volume_down = pactl set-sink-volume \@DEFAULT_SINK@ -5%
 repeatable_binding_volume_up = KEY_VOLUMEUP
 command_volume_up = pactl set-sink-volume \@DEFAULT_SINK@ +5%
-
 command_mic_mute = pactl set-source-mute \@DEFAULT_SOURCE@ toggle
 
 
@@ -280,13 +280,13 @@ restore = <super> KEY_DOWN | <super> KEY_KP0
 
 # Change active window with an animation.
 [switcher]
-# next_view = <alt> KEY_TAB
+# next_view = <super> KEY_TAB
 next_view = <super> KEY_TAB
-prev_view = <alt> <shift> KEY_TAB
+prev_view = <super> <shift> KEY_TAB
 
 # Simple active window switcher.
 [fast-switcher]
-activate = <alt> KEY_ESC
+activate = <super> KEY_ESC
 
 # Workspaces ───────────────────────────────────────────────────────────────────
 
@@ -313,7 +313,7 @@ with_win_9 = <super> <shift> KEY_9
 
 # Show the current workspace row as a cube.
 [cube]
-activate = <ctrl> <alt> BTN_LEFT
+activate = <ctrl> <super> BTN_LEFT
 # Switch to the next or previous workspace.
 #rotate_left = <super> <ctrl> KEY_H
 #rotate_right = <super> <ctrl> KEY_L
@@ -355,7 +355,7 @@ toggle = <super> KEY_I
 
 # Send toggle menu event.
 # [wayfire-shell]
-# toggle_menu = <super> KEY_B
+toggle_menu = <super> KEY_B
 
 # Rules ────────────────────────────────────────────────────────────────────────
 
