--- a/hyprland.conf
+++ b/hyprland.conf
@@ -35,7 +35,7 @@ monitor=,preferred,auto,auto
 
 # Set programs that you use
 $terminal = alacritty
-$fileManager = thunar
+# $fileManager = thunar
 $menu = rofi -show drun
 
 #################
@@ -46,10 +46,12 @@ $menu = rofi -show drun
 # Or execute your favorite apps at launch like this:
 
 exec-once = $terminal
-exec-once = waybar
+exec-once = [workspace 2 silent] librewolf
+# exec-once = waybar
 exec-once = mako
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once = hyprsunset -t 4000
+exec-once=hyprctl setcursor Oxygen-14-Matrix-Green 32
+# exec-once = hyprsunset -t 4000
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -59,7 +61,7 @@ exec-once = hyprsunset -t 4000
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
-env = GRIM_DEFAULT_DIR,/home/juan/screenshots
+env = GRIM_DEFAULT_DIR,/home/juan/Pictures
 
 ###################
 ### PERMISSIONS ###
@@ -76,7 +78,6 @@ ecosystem {
 permission = /usr/(bin|local/bin)/grim, screencopy, allow
 permission = /usr/(lib|libexec|lib64)/xdg-desktop-portal-hyprland, screencopy, allow
 permission = /usr/(bin|local/bin)/hyprpm, plugin, allow
-
 
 #####################
 ### LOOK AND FEEL ###
@@ -233,7 +234,7 @@ $mainMod = ALT # Sets "Windows" key as main modifier
 bind = $mainMod, RETURN, exec, $terminal
 bind = $mainMod, Q, killactive,
 bind = $mainMod, M, exit,
-bind = $mainMod, E, exec, $fileManager
+# bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, D, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
@@ -310,7 +311,7 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 # windowrule = float,class:^(kitty)$,title:^(kitty)$
 
 # Ignore maximize requests from apps. You'll probably like this.
-windowrule = suppressevent maximize, class:.*
+# windowrule = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
-windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+# windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
