--- a/kitty.conf
+++ b/kitty.conf
@@ -1,7 +1,7 @@
 hide_window_decorations yes
-# font_family family="IosevkaTermSlab Nerd Font Mono" style="Light"
+# font_family family="UbuntuSans Mono Nerd Font Mono" style="Light"
 font_family family="IosevkaTerm Nerd Font Mono" style="Light"
-font_size 16.0
+font_size 17.0
 italic_font none
 # foreground #d2691e 
 foreground  #32cd32
